Fixed menus on mobile issue and improved responsive display of large images.

--- a/style.css
+++ b/style.css
@@ -1,19 +1,10 @@
 body {
-  	border-top: 13px solid black;
 	background: rgba(255,255,255,1);
 }
 
 nav.top-bar {
     z-index: 99; box-shadow: 0px 4px 5px rgba(0, 0, 0, 0.5);
     margin-bottom: 0px;
-}
-
-@media (max-width:640px) {
-
-    .large-2 {
-    	display: none;
-    }
-
 }
 
 .wrapper {
@@ -90,7 +81,7 @@ h2.title {
 }
 
 h2.title1 {
-    margin: 640px 0 20px 1200px;
+    margin: 70% 0 0 80%;
 }
 
 h2.title2 {
@@ -213,4 +204,27 @@ blockquote:before, blockquote:after {
 
 .reveal-modal {
     position:fixed;
+}
+
+@media (max-width:640px) {
+
+    .large-2 {
+        display: none;
+    }
+
+    h2.title {
+        font-size: 3em;
+        text-transform: uppercase;
+        color: rgba(215,215,245,0.8);
+    }
+
+    h2.title1 {
+        margin: 80% 0 0;
+    }
+
+    h2.title2 {
+        margin: 0 0 5% 5%;
+        opacity:0.2;
+    }
+
 }
